--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             <li class="b-stats-list-item">
                 <div class="c-statistic">
                    
-                    <div class="c-statistic-label">
+                    <div class="c-statistic-label-ex">
                         <p> 
-                            "Explore more data about our community with the " <a href="https://oira.harvard.edu/factbook/">Harvard Fact Book</a>
+                            "Explore more data about our community with the  <a  class="explore" href="https://oira.harvard.edu/factbook/">Harvard Fact Book</a>
                         </p>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
     <div class="b-column-content">
         <div class="c-content-block">
            <p>
-            "Harvard " 
+            "Harvard"
             <a href="https://www.harvard.edu/about/leadership-and-governance/">leadership and governance</a>" is composed of four components:"
            </p> 
         </div>
@@ -188,7 +188,7 @@
         </div>
         <div class="b-column-col">
             <h3 class="h6-b-column">
-                <a href="https://www.harvard.edu/about/leadership-and-governance/harvard-corporation/">Harvard Corporation</a>
+                <a class="h6-column-link" href="https://www.harvard.edu/about/leadership-and-governance/harvard-corporation/">Harvard Corporation</a>
 
             </h3>
             <div class="b-column-col">
