--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                 </div>
                 <p class="c-content-block-cta">
                     <a class="c-content-block-link" href="https://www.harvard.edu/about/history/" aria-label="Explore all of Harvard's history">
+                        <i class="fa-solid fa-arrow-right"></i>
                         <span class="a-btn-text" > 
                             Explore all of Harvard’s history			</span>
                     </a>
