--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
                 </div>
                 <p class="c-content-block-cta">
                     <a class="c-content-block-link" href="https://www.harvard.edu/about/history/" aria-label="Explore all of Harvard's history">
-                        <i class="fa-solid fa-arrow-right"></i>
                         <span class="a-btn-text" > 
                             Explore all of Harvard’s history			</span>
                     </a>
@@ -270,5 +269,85 @@
            </div> 
         </div>
   </section>
+  <fooer class="footer-site">
+    <div class="left-f-container">
+        <div class="footer-row">
+            <div class="footer-menu-col">
+                <h2 class="footer-heading">Security & Brand</h2>
+                <nav class="footer-nav">
+                    <ol class="footer-nav-list">
+                        <li class="footer-one-item">
+                            <a href="https://www.harvard.edu/copyright-issue/" class="footer-one__action" data-attribute="report-copyright-infringement-2">Report Copyright Infringement</a>
+
+                        </li>
+                        <li class="footer-one-item"><a href="https://www.harvard.edu/security-issue/" class="footer-one__action" data-attribute="report-security-issue-2">Report Security Issue</a></li>
+                        <li class="footer-one-item"><a href="https://trademark.harvard.edu/pages/trademark-notice" class="footer-one__action" data-attribute="trademark-notice">Trademark Notice</a></li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="footer-menu-col">
+                <h2 class="footer-heading">Website</h2>
+                <nav class="footer-nav">
+                    <ol class="footer-nav-list">
+                        <li class="footer-two-item">
+                            <a href="https://accessibility.harvard.edu/" class="footer-two__action" data-attribute="accessibility">Accessibility</a>
+
+                        </li>
+                        <li class="footer-two-item"><a href="https://accessibility.huit.harvard.edu/digital-accessibility-policy" class="footer-two__action" data-attribute="digital-accessibility">Digital Accessibility</a>
+                        <li class="footer-two-item"><a href="https://www.harvard.edu/privacy-statement/" class="footer-two__action" data-attribute="9826">Privacy Statement</a>
+                    </ol>
+                </nav>
+            </div>
+            <div class="footer-menu-col">
+                <h2 class="footer-heading">Get In Touch</h2>
+                <nav class="footer-nav">
+                    <ol class="footer-nav-list">
+                        <li class="footer-three-item">
+                            <a href="/contact-harvard" class="footer-three__action" data-attribute="contact-harvard">Contact Harvard</a>
+                        </li>
+                        <li class="footer-three-item"><a href="/maps-directions" class="footer-three__action" data-attribute="maps-directions">Maps &amp; Directions</a></li>
+                        <li class="footer-three-item"><a href="http://hr.harvard.edu/jobs" class="footer-three__action" data-attribute="jobs">Jobs</a></li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+        <div class="site-footer-row">
+            <div class="site-footer-copyright">
+                <p>© 2023&nbsp;The President and Fellows of Harvard College</p>
+            </div>
+            <div class="site-footer-logo">
+                <a href="/">
+                    <img src="images/logo.jpg" alt="Harvard University">
+                </a>
+            </div>
+            <div class="site-footer-social">
+                <div class="social-follow">
+                    <ul class="social-follow-list">
+                        <li class="social-follow__item ">
+                            <a href="https://www.facebook.com/Harvard/" class="social-follow__anchor" rel="me noopener" title="Facebook" target="_blank">
+                                <span>Facebook</span>
+                            </a>
+                        </li>
+                        <li class="social-follow__item ">
+                            <a href="https://twitter.com/harvard" class="social-follow__anchor" rel="me noopener" title="Twitter" target="_blank">
+                                <span>Twitter</span>
+                            </a>
+                        </li>
+                        <li class="social-follow__item social-follow__item--instagram">
+                            <a href="https://www.instagram.com/harvard/" class="social-follow__anchor" rel="me noopener" title="Instagram" target="_blank">
+                                <span>Instagram</span>
+                            </a>
+                        </li>
+                        <li class="social-follow__item social-follow__item--youtube">
+                            <a href="https://www.youtube.com/harvard" class="social-follow__anchor" rel="me noopener" title="YouTube" target="_blank">
+                                <span>YouTube</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+  </fooer>
 </body>
 </html>
